--- a/index.html
+++ b/index.html
@@ -5,12 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
-    <title>Contact Me SPA</title>
+
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/eb48babf47.js" crossorigin="anonymous"></script>
+
+    <title>Contact me SPA</title>
 </head>
+
 <body>
    <main>
         <section class="contactos">
-            <button>Hola</button>
+    <nav>
+    <div class="perfil">
+     <img src="./assets/imgs/maria.jpg" alt="">
+    </div>
+   
+    <div class="items">
+        <i></i>
+        <i></i>
+    </div>
+</nav>
+
+            <div class="nuevo-chat">
+            <button>Nuevo Chat</button>
+            </div>
+
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
+                <div class="info"> 
+                    <h3>Juanita</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+
         </section>
 
         <section class="principal">
