--- a/index.html
+++ b/index.html
@@ -1,101 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css">
-
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/eb48babf47.js" crossorigin="anonymous"></script>
-
+    <!-- Título -->
     <title>Contact me SPA</title>
 </head>
 
 <body>
-   <main>
+    <main>
+        <!-- Section1 -->
         <section class="contactos">
-    <nav>
-    <div class="perfil">
-     <img src="./assets/imgs/maria.jpg" alt="">
-    </div>
-   
-    <div class="items">
-        <i></i>
-        <i></i>
-    </div>
-</nav>
-
+            <!-- Nav -->
+            <nav>
+                <div class="name">
+                    <img src="./assets/imgs/maria.jpg" alt="Foto de María">
+                    <div class="perfil">
+                        <h2>María</h2>
+                        <p>Activa Ahora</p>
+                    </div>
+                </div>
+                <div class="items">
+                    <i class="fa-regular fa-comment fa-lg"></i>
+                    <i class="fa-solid fa-bars fa-lg"></i>
+                </div>
+            </nav>
+            <!-- Button -->
             <div class="nuevo-chat">
-            <button>Nuevo Chat</button>
+                <button>
+                    <h2>Nuevo Chat</h2>
+                </button>
             </div>
-
+            <!-- Contactos -->
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
-                    <p>Ultimo mensaje</p>
-                </div>
-            </div>
-
-            <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
-                    <p>Ultimo mensaje</p>
-                </div>
-            </div>
-
-            <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
+                <img src="./assets/imgs/juanita.jpg" alt="Foto de Juanita">
+                <div class="info">
                     <h3>Juanita</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
+                <img src="./assets/imgs/alberto.jpg" alt="Foto de Alberto">
+                <div class="info">
+                    <h3>Alberto</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
+                <img src="./assets/imgs/ignacio.jpg" alt="Foto de Ignacio">
+                <div class="info">
+                    <h3>Ignacio</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
+                <img src="./assets/imgs/cristian.jpg" alt="Foto de Cristian">
+                <div class="info">
+                    <h3>Cristian</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
+                <img src="./assets/imgs/maria_jose.jpg" alt="Foto de María José">
+                <div class="info">
+                    <h3>María José</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
             <div class="contacto">
-                <img src="./assets/imgs/Screen Shot 2018-11-28 at 15.27.14.jpg" alt="">
-                <div class="info"> 
-                    <h3>Juanita</h3>
+                <img src="./assets/imgs/gonzalo.jpg" alt="Foto de Gonzalo">
+                <div class="info">
+                    <h3>Gonzalo</h3>
                     <p>Ultimo mensaje</p>
                 </div>
             </div>
-
+            <div class="contacto">
+                <img src="./assets/imgs/juan_pablo.jpg" alt="Foto de Juan Pablo">
+                <div class="info">
+                    <h3>Juan Pablo</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
+            <div class="contacto">
+                <img src="./assets/imgs/magdalena.jpg" alt="Foto de Magdalena">
+                <div class="info">
+                    <h3>Magdalena</h3>
+                    <p>Ultimo mensaje</p>
+                </div>
+            </div>
         </section>
-
+        <!-- Section2 -->
         <section class="principal">
             <img src="./assets/imgs/hand.png" alt="">
-            <h2>Comienza el Networking</h2>
-            <p>Presiona el botón "Nuevo Chat" para comenzar a crear nuevas redes de contacto para tu empresa o emprendimiento</p>
+            <h1>Comienza el Networking</h1>
+            <p>Presiona el botón <b>"Nuevo Chat"</b> para comenzar a crear nuevas <br>
+                redes de contacto para tu empresa o
+                emprendimiento</p>
         </section>
-   </main>
+    </main>
 </body>
+
 </html>
